# froggy

./: .gitignore  README.md
client/: package-lock.json  package.json  tailwind.config.ts
client/app/: layout.tsx  page.tsx
client/app/game/: page.tsx
client/app/project/[id]/: page.tsx
client/components/: chat-input.tsx  message-list.tsx  starter-prompts.tsx
server/: README.md  llm.py  main.py  pyproject.toml  requirements.txt  sandbox.py  test_websocket.py  utils.py
server/template_files/: package.json  server.js
