[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Bharath Sriraam R R <albharath.1305@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
anthropic = "^0.49.0"
fastapi = {extras = ["standard"], version = "^0.115.11"}
e2b-code-interpreter = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
